[package]
name = "stash"
version = "1.0.0"
edition = "2024"

[dependencies]
bpaf = { version = "0.9.19", features = ["derive"] }
color-eyre = "0.6.3"
dateparser = "0.2.1"
dirs = "5.0.1"
dom_smoothie = "0.10.0"
epub-builder = "0.7.4"
fs-err = "3.1.0"
scraper = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.0"
slug = "0.1.6"
toml = "0.8.20"
ureq = { version = "2.12.1", features = ["cookies", "json"] }
url = "2.5.4"
